--- a/index.html
+++ b/index.html
@@ -3,9 +3,23 @@
   <head>
     <meta charset="UTF-8">
     <title>Hello World!</title>
-    <link rel="stylesheet" href="https://bootswatch.com/4/cerulean/bootstrap.min.css">
+    <link rel="stylesheet" href="https://bootswatch.com/4/superhero/bootstrap.min.css">
   </head>
   <body>
+    <nav class="navbar navbar-expand-sm bg-primary navbar-light">
+      <a class="navbar-brand" href="#">ProjectName</a>
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Active</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link"href="#">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link"href="#">Link</a>
+        </li>
+      </ul>
+    </nav>
     <h1>Hello World!</h1>
     <!-- All of the Node.js APIs are available in this renderer process. -->
     We are using Node.js <script>document.write(process.versions.node)</script>,
