--- a/index.html
+++ b/index.html
@@ -2,21 +2,23 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Hello World!</title>
+    <title>Project Name</title>
     <link rel="stylesheet" href="https://bootswatch.com/4/superhero/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
   </head>
   <body>
     <nav class="navbar navbar-expand-sm bg-primary navbar-light">
-      <a class="navbar-brand" href="#">ProjectName</a>
+      <a class="navbar-brand">ProjectName</a>
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Active</a>
+          <a class="nav-link active" href="index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link"href="#">Link</a>
+          <a class="nav-link" href=championstats.html>Champion Stats</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link"href="#">Link</a>
+          <a class="nav-link" href="#">Link</a>
         </li>
       </ul>
     </nav>
