Started work on dynamically create a table from JSON objects array from NeDB

--- a/championstats.html
+++ b/championstats.html
@@ -26,5 +26,9 @@
       </ul>
     </nav>
     <p>This is the champion stats page</p>
+    <script>
+      // You can also require other files to run in this process
+      require('./renderer.js')
+    </script>
   </body>
 </html>
