--- a/championstats.html
+++ b/championstats.html
@@ -12,16 +12,10 @@
       <a class="navbar-brand">ProjectName</a>
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="index.html">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" href=championstats.html>Champion Stats</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
           <a href="index.html" class="btn btn-secondary" role="button">Home</a>
+        </li>
+        <li class="nav-item">
+          <a href="championstats.html" class="btn btn-secondary active" role="button">Champion Stats</a>
         </li>
       </ul>
     </nav>
