--- a/index.html
+++ b/index.html
@@ -11,14 +11,11 @@
     <nav class="navbar navbar-expand-sm bg-primary navbar-light">
       <a class="navbar-brand">ProjectName</a>
       <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link active" href="index.html">Home</a>
+        <li class="nav-item">
+          <a href="index.html" class="btn btn-secondary active" role="button">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href=championstats.html>Champion Stats</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a href="championstats.html" class="btn btn-secondary" role="button">Champion Stats</a>
         </li>
       </ul>
     </nav>
