--- a/championstats.html
+++ b/championstats.html
@@ -19,10 +19,65 @@
         </li>
       </ul>
     </nav>
+    <div id="showData"></div>
     <p>This is the champion stats page</p>
     <script>
       // You can also require other files to run in this process
       require('./renderer.js')
     </script>
   </body>
+  <script>
+    var Datastore = require('nedb')
+      , db = new Datastore({ filename: 'ChampionStats.txt', autoload: true });
+
+    var x = null;
+      db.find({ }, function (err, docs) {
+        x = docs;
+        CreateTableFromJSON(x); // Due to asynchronous callbacks and returns I have to call function here
+      });
+
+    function CreateTableFromJSON(data) {
+        var myBooks = data
+
+        // EXTRACT VALUE FOR HTML HEADER.
+        var col = [];
+        for (var i = 0; i < myBooks.length; i++) {
+            for (var key in myBooks[i]) {
+                if (col.indexOf(key) === -1) {
+                    col.push(key);
+                }
+            }
+        }
+        col.splice(-1, 1)
+
+        // CREATE DYNAMIC TABLE.
+        var table = document.createElement("table");
+
+        // CREATE HTML TABLE HEADER ROW USING THE EXTRACTED HEADERS ABOVE.
+
+        var tr = table.insertRow(-1);                   // TABLE ROW.
+
+        for (var i = 0; i < col.length; i++) {
+            var th = document.createElement("th");      // TABLE HEADER.
+            th.innerHTML = col[i];
+            tr.appendChild(th);
+        }
+
+        // ADD JSON DATA TO THE TABLE AS ROWS.
+        for (var i = 0; i < myBooks.length; i++) {
+
+            tr = table.insertRow(-1);
+
+            for (var j = 0; j < col.length; j++) {
+                var tabCell = tr.insertCell(-1);
+                tabCell.innerHTML = myBooks[i][col[j]];
+            }
+        }
+
+        // FINALLY ADD THE NEWLY CREATED TABLE WITH JSON DATA TO A CONTAINER.
+        var divContainer = document.getElementById("showData");
+        divContainer.innerHTML = "";
+        divContainer.appendChild(table);
+    }
+</script>
 </html>
