--- a/championstats.html
+++ b/championstats.html
@@ -42,12 +42,12 @@
       });
 
     function CreateTableFromJSON(data) {
-        var myBooks = data
+        var myData = data
 
         // EXTRACT VALUE FOR HTML HEADER.
         var col = [];
-        for (var i = 0; i < myBooks.length; i++) {
-            for (var key in myBooks[i]) {
+        for (var i = 0; i < myData.length; i++) {
+            for (var key in myData[i]) {
                 if (col.indexOf(key) === -1) {
                     col.push(key);
                 }
@@ -67,26 +67,34 @@
           var th = document.createElement("th");      // TABLE HEADER.
           th.innerHTML = col[i];
           tr.appendChild(th);
-          th.setAttribute("class", "sticky-top bg-primary border-0")
+          th.setAttribute("class", "sticky-top bg-primary border-0 align-middle text-center")
           if (i == 0) {
             th.setAttribute("onclick", `sortAlphaTable(${i})`);
           } else {
             th.setAttribute("onclick", `sortNumTable(${i})`);
           }
-          var span = document.createElement("span");
-          th.appendChild(span);
-          span.setAttribute("class", "oi oi-elevator");
-          span.setAttribute("aria-hidden", "true");
+          var div = document.createElement("div");
+          th.appendChild(div);
+          div.setAttribute("class", "d-inline-block align-middle pl-1");
+          var spanUp = document.createElement("span");
+          var spanDown = document.createElement("span");
+          div.appendChild(spanUp);
+          div.appendChild(spanDown);
+          spanUp.setAttribute("class", "oi oi-caret-top d-block");
+          spanUp.setAttribute("aria-hidden", "true");
+          spanDown.setAttribute("class", "oi oi-caret-bottom d-block");
+          spanDown.setAttribute("aria-hidden", "true");
+
       }
 
       // ADD JSON DATA TO THE TABLE AS ROWS.
-      for (var i = 0; i < myBooks.length; i++) {
+      for (var i = 0; i < myData.length; i++) {
 
         tr = table.insertRow(-1);
 
         for (var j = 0; j < col.length; j++) {
           var tabCell = tr.insertCell(-1);
-          tabCell.innerHTML = myBooks[i][col[j]];
+          tabCell.innerHTML = myData[i][col[j]];
         }
       }
 
