--- a/championstats.html
+++ b/championstats.html
@@ -62,10 +62,18 @@
       // Create the dynamic table
       var table = document.createElement("table");
       table.setAttribute("id", "statsTable");
-      table.setAttribute("class", "table table-sm")
+      table.setAttribute("class", "table table-striped table-sm")
       // CREATE HTML TABLE HEADER ROW USING THE EXTRACTED HEADERS ABOVE.
 
       var tr = table.insertRow(-1);                   // TABLE ROW.
+
+      var toolTipData = ["Champion Name", "Health Points", "Health Points gained per level",
+      "Health Regeneration", "Health Regeneration gained per level",
+      "Mana Points", "Mana Points gained per level",
+      "Mana Regeneration", "Mana Regeneration gained per level",
+      "Attack Damage", "Attack Damage gained per level", "Attack Speed",
+      "Attack Speed gained per level", "Armour", "Armour gained per level",
+      "Magic Resist", "Magic Resist gained per level", "Movement Speed", "Range"];
 
       for (var i = 0; i < col.length; i++) {
           var th = document.createElement("th");      // TABLE HEADER.
@@ -74,7 +82,8 @@
           th.setAttribute("class", "sticky-top bg-primary border-0 align-middle text-center pointer");
           th.setAttribute("data-toggle", "tooltip");
           th.setAttribute("data-placement", "bottom");
-          th.setAttribute("title", "Test");
+
+          th.setAttribute("title", toolTipData[i]);
           if (i == 0) {
             th.setAttribute("onclick", `sortTable(${i}, "alpha")`);
           } else {
