--- a/championstats.html
+++ b/championstats.html
@@ -23,6 +23,9 @@
         <li class="nav-item">
           <a href="championstats.html" class="btn btn-secondary active" role="button">Champion Stats</a>
         </li>
+        <li>
+          <a href="championcomparison.html" class="btn btn-secondary" role="button">Champion Comparison</a>
+        </li>
       </ul>
     </nav>
     <div id="showData"></div>
