--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Project Name</title>
+    <title>LoLBS</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/superhero/bootstrap.min.css" rel="stylesheet" integrity="sha384-LS4/wo5Z/8SLpOLHs0IbuPAGOWTx30XSoZJ8o7WKH0UJhRpjXXTpODOjfVnNjeHu" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
@@ -11,7 +11,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-sm bg-primary navbar-light">
-      <a class="navbar-brand">ProjectName</a>
+      <a class="navbar-brand">LoLBS</a>
       <ul class="navbar-nav">
         <li class="nav-item">
           <a href="index.html" class="btn btn-secondary active" role="button">Home</a>
@@ -24,12 +24,12 @@
         </li>
       </ul>
     </nav>
-    <h1>Hello World!</h1>
-    <!-- All of the Node.js APIs are available in this renderer process. -->
-    We are using Node.js <script>document.write(process.versions.node)</script>,
-    Chromium <script>document.write(process.versions.chrome)</script>,
-    and Electron <script>document.write(process.versions.electron)</script>.
-    <p>This is a paragraph</p>
+    <div class="container">
+      <h1 class="text-center">Welcome to Legend of Legends Base Stats program!</h1>
+      <p class="text-center">This program has a table of all the base statistics of all the champions within League of Legends</p>
+      <p class="text-center">You can also compare two champions and their base stats</p>
+      <p class="text-center">To get started click on either the Champion Stats button for their base statiscs or the Champion Comparison button to compare</p>
+    </div>
     <script>
       // You can also require other files to run in this process
       require('./renderer.js')
